--- a/main.css
+++ b/main.css
@@ -4,39 +4,11 @@
  * 598234: deeper green
  */
 
-html, body {
-  height: 100%;
-}
 
-body {
+
+.logo {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  font-family: 'Open Sans', sans-serif;
-}
-
-h2 {
-  opacity: 0.8;
-  color: #598234;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
 }
-
-.spinner {
-  margin-top: 5rem;
-  width: 5rem;
-  height: 5rem;
-  -webkit-animation:spin 4s linear infinite;
-  -moz-animation:spin 4s linear infinite;
-  animation:spin 4s linear infinite;
-  opacity: 0.5;
-}
-
-@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
-@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
-@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
