--- a/main.css
+++ b/main.css
@@ -9,6 +9,6 @@
 .logo {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
 }
