implemented working infinite scroll, still needs tuning

--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@
  * 598234: deeper green
  */
  .Logo {
+   margin-top: 2%;
    display: flex;
    justify-content: space-around;
    align-items: center;
